test/tests/errors/error-class-var-rhs-invalid.sm
// true
// false
// false
/**/
/**/

program {
    var x: int = "test";
}